kubernetes/namespace.yaml
###############################################################################
# File Name : namespace.yaml
#
# Description:
# -----------------------------------------------------------------------------
# This file creates a dedicated namespace for the Employee CRUD Application.
#
# Why Namespace?
#
# - Groups all application resources together.
# - Avoids conflicts with other applications.
# - Makes resource management easier.
# - Enables future resource quotas and RBAC.
#
###############################################################################

apiVersion: v1

kind: Namespace

metadata:

  # Namespace Name
  name: employee-app

  labels:

    app: employee-crud

    environment: development

    managed-by: kubectl
