kubernetes/backend-deployment.yaml
###############################################################################
# File Name : backend-deployment.yaml
#
# Description:
# -----------------------------------------------------------------------------
# Deploys the Node.js Backend API.
#
# Responsibilities
# ----------------
# ✔ Pull Backend Image from DockerHub
# ✔ Read Database Configuration from ConfigMap
# ✔ Read Database Credentials from Secret
# ✔ Connect to MySQL Service
# ✔ Restart Automatically if Pod Crashes
#
###############################################################################

apiVersion: apps/v1

kind: Deployment

metadata:
  name: backend
  namespace: employee-app

  labels:
    app: backend

spec:

  ###########################################################################
  # Only one backend Pod
  ###########################################################################

  replicas: 1

  selector:
    matchLabels:
      app: backend

  ###########################################################################
  # Pod Template
  ###########################################################################

  template:

    metadata:
      labels:
        app: backend

    spec:

      containers:

      - name: backend

        #####################################################################
        # Backend Docker Image
        #####################################################################

        image: navin1199/employee-backend:5

        imagePullPolicy: IfNotPresent

        ports:

        - containerPort: 5000

        #####################################################################
        # Environment Variables
        #####################################################################

        resources:

          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "300m"
            memory: "256Mi"

        #####################################################################
        # Health Checks
        #####################################################################

        startupProbe:

          httpGet:
            path: /employees
            port: 5000

          periodSeconds: 10
          failureThreshold: 30

        readinessProbe:

          httpGet:
            path: /employees
            port: 5000

          initialDelaySeconds: 10
          periodSeconds: 10

        livenessProbe:

          httpGet:
            path: /employees
            port: 5000

          initialDelaySeconds: 30
          periodSeconds: 20
