kubernetes/frontend-service.yaml
###############################################################################
# File Name : frontend-service.yaml
#
# Description:
# -----------------------------------------------------------------------------
# Exposes the Frontend application inside Kubernetes.
#
# Responsibilities
# ----------------
# ✔ Stable DNS Name
# ✔ Stable Cluster IP
# ✔ Used by Ingress
#
###############################################################################

apiVersion: v1

kind: Service

metadata:
  name: frontend-service
  namespace: employee-app

  labels:
    app: frontend

spec:

  ###########################################################################
  # Internal Service
  ###########################################################################

  type: ClusterIP

  ###########################################################################
  # Select Frontend Pod
  ###########################################################################

  selector:
    app: frontend

  ###########################################################################
  # Port Mapping
  ###########################################################################

  ports:

    - name: http

      port: 80

      targetPort: 80

      protocol: TCP
