kubernetes/mysql-service.yaml
###############################################################################
# File Name : mysql-service.yaml
#
# Description:
# -----------------------------------------------------------------------------
# Exposes the MySQL Pod inside the Kubernetes cluster.
#
# Responsibilities:
# ✔ Provides a stable DNS name (mysql-service)
# ✔ Provides a stable Cluster IP
# ✔ Allows Backend Pods to connect to MySQL
#
# Service Type:
#   ClusterIP (Internal Communication Only)
#
###############################################################################

apiVersion: v1

kind: Service

metadata:

  name: mysql-service

  namespace: employee-app

  labels:

    app: mysql

spec:

  ###########################################################################
  # Internal Kubernetes Service
  ###########################################################################

  type: ClusterIP

  ###########################################################################
  # Select MySQL Pods
  ###########################################################################

  selector:

    app: mysql

  ###########################################################################
  # Port Mapping
  ###########################################################################

  ports:

    - name: mysql

      port: 3306

      targetPort: 3306

      protocol: TCP
