kubernetes/ingress.yaml
###############################################################################
# File Name : ingress.yaml
#
# Description:
# -----------------------------------------------------------------------------
# Exposes the Employee CRUD Application.
#
# Routes:
#
# /       -> Frontend
# /api    -> Backend
#
###############################################################################

apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: employee-ingress

  namespace: employee-app

  annotations:

    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:

  ingressClassName: nginx

  rules:

  - host: employee.local

    http:

      paths:

      #######################################################################
      # Backend
      #######################################################################

      - path: /api(/|$)(.*)

        pathType: ImplementationSpecific

        backend:

          service:

            name: backend-service

            port:

              number: 5000

      #######################################################################
      # Frontend
      #######################################################################

      - path: /

        pathType: Prefix

        backend:

          service:

            name: frontend-service

            port:

              number: 80
